--- a/Dwar.Http/Dwar.Http.csproj
+++ b/Dwar.Http/Dwar.Http.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dwar\Dwar.csproj" />
+  </ItemGroup>
+
 </Project>
