--- a/Dwar.FileIO/Dwar.FileIO.csproj
+++ b/Dwar.FileIO/Dwar.FileIO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dwar\Dwar.csproj" />
+  </ItemGroup>
+
 </Project>
