--- a/Dwar.FileIO/Dwar.FileIO.csproj
+++ b/Dwar.FileIO/Dwar.FileIO.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dwar\Dwar.csproj" />
   </ItemGroup>
 
