--- a/Dwar.UI/Dwar.UI.csproj
+++ b/Dwar.UI/Dwar.UI.csproj
@@ -8,21 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1774.30" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dwar.FileIO\Dwar.FileIO.csproj" />
     <ProjectReference Include="..\Dwar.Http\Dwar.Http.csproj" />
     <ProjectReference Include="..\Dwar\Dwar.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.Web.WebView2.Core">
-      <HintPath>..\..\dwar\dwar\bin\Debug\Microsoft.Web.WebView2.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Web.WebView2.WinForms">
-      <HintPath>..\..\dwar\dwar\bin\Debug\Microsoft.Web.WebView2.WinForms.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Web.WebView2.Wpf">
-      <HintPath>..\..\dwar\dwar\bin\Debug\Microsoft.Web.WebView2.Wpf.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsInput">
       <HintPath>..\..\dwar\dwar\bin\Debug\WindowsInput.dll</HintPath>
     </Reference>
